config/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: light-control
  name: light-control
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      deployment: light-control
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        deployment: light-control
    spec:
      containers:
        - image: quay.io/wpernath/light-control:latest
          imagePullPolicy: IfNotPresent
          name: light-control
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: 
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 5m
              memory: 256Mi          
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
