config/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: light-control
  name: light-control
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deployment: light-control
  sessionAffinity: None
  type: ClusterIP
