config/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: light-control
  name: light-control
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: light-control
    weight: 100
  wildcardPolicy: None
